Bug -34608 - close icon high contrast mode visibility issue fix done

--- a/css/main-1.css
+++ b/css/main-1.css
@@ -6408,4 +6408,7 @@ agendas-container agendas-item agendas-published {
     .info-card:hover .svg-arrow path {
       stroke: var(--color-default);
     }
+    .alert .alert-close svg {
+        fill: aliceblue;
+    }
   }
